# TechConnectAgentic

./: README.md  postcreate.sh  requirements.txt  verifyauth.py
.devcontainer/: devcontainer.json
DEV/: claude.py
infra/: main.bicep  main.parameters.json
src/: pyproject.toml  requirements.txt
src/dev/: 01-testanthropic.py  03-testopenaicon.py  04-testopenaitav.py  05-Assistant.py  queries.txt  testanthropic.py  testopenai.py
src/quartapp/: chatfail.py  chatfail2.py
src/quartapp/templates/: index.html
